tests/ui/regions/issue-102374.stderr
error[E0308]: mismatched types
  --> $DIR/issue-102374.rs:17:5
   |
LL | ) -> i32 {
   |      --- expected `i32` because of return type
LL |     f
   |     ^ expected `i32`, found fn pointer
   |
   = note:    expected type `i32`
           found fn pointer `fn(Cell<...>)`
           the full type name has been written to '$TEST_BUILD_DIR/regions/issue-102374/issue-102374.long-type-hash.txt'

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
